# EchoPrime

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
benchmarks/: million_run.py
contracts/: .env.example  README.md  hardhat.config.js  package-lock.json  package.json
contracts/scripts/: deploy.js  submit-prime.js
contracts/src/: EchoPrimeOracle.sol  IEchoPrimeOracle.sol
contracts/test/: EchoPrimeOracle.test.js
examples/: basic_usage.py  batch_verify.py
src/echoprime/: __init__.py  estimator.py  oracle.py  utils.py  verifier.py
src/echoprime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_estimator.py  test_integration.py  test_verifier.py
whitepaper/: echoprime-whitepaper.tex
